--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 .Footer {
   text-align: center;
-  background: #009869;
+  background: rgba(171, 189, 0, 0.8);
   color: white;
   width: 100%;
   height: 30px;
